# currency-exchange-slint

./: Cargo.toml  slint-view.sh
.cargo/: config.toml
src/: kvs.rs  lib.rs  main.rs
ui/: main.slint
ui/theme/: index.slint
