[package]
name = "saraf"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"
name = "saraf"

[[bin]]
path = "src/main.rs"
name = "saraf"

[dependencies]
slint = { version = "1.13", features = ["backend-android-activity-06"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
console_error_panic_hook = "0.1.5"
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "Document",  # optional, if you want to access document
    "console"    # optional, for logging
] }



[build-dependencies]
slint-build = { version = "1.13"  }

[package.metadata.android]
package = "dev.slint.material_template"
apk_name = "saraf"

[package.metadata.android.application]
label = "Saraf"